--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "botgram": "^2.2",
     "escape-html": "1",
+    "forever": "^3.0.2",
     "mime": "1",
     "node-pty": "^0.9.0",
     "node-termios": "0.0.13",
